--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@
 
 * {
     box-sizing: border-box;
+    font-family: 'Eurofurence', sans-serif;
 }
 
 body {
@@ -24,7 +25,13 @@ body {
 
 h1 {
     margin: 0;
-    font-family: 'Eurofurence', sans-serif;
+    
+}
+
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 button {
@@ -34,24 +41,66 @@ button {
     font-size: 1em;
 }
 
+a {
+    cursor: pointer;
+}
+
 /* CSS Base Settings */
 
 /* Header */
+
 header {
     padding: 1em 0;
     background-color: rgba(50, 50, 50, 0.9);
     color: hotpink;
+    position: relative;
 }
 
 header input {
     display: none;
 }
 
+header nav {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    width: 100vw;
+    text-align: center;
+}
+
+header nav {
+    transform: scaleX(0);
+    transition: transform 500ms;
+    transform-origin: right;
+}
+.text {
+    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+}
+header input:checked + nav{
+    transform: scaleX(1);
+}
+
+.nav-menu {
+    background-color: rgba(128, 128, 128, 0.692);
+    color: rgb(243, 8, 8);
+}
+
+.nav-menu li {
+    padding: 1em 0;
+    font-size: 1.5em;
+}
+
+.list-item + .list-item {
+    border-top: 1px solid magenta;
+}
+
+
+
 .nav-menu-toggle-label i::before {
     font-size: 2em;
 }
 
-header input:checked
+/* header input:checked */
 /* Header */
 
 
