--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,8 @@ button {
 
 a {
     cursor: pointer;
+    text-decoration: none;
+    color: inherit;
 }
 
 /* CSS Base Settings */
@@ -69,15 +71,14 @@ header nav {
 }
 
 header nav {
-    transform: scaleX(0);
+    transform: translateX(-100%);
     transition: transform 500ms;
-    transform-origin: right;
 }
 .text {
     clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
 }
 header input:checked + nav{
-    transform: scaleX(1);
+    transform: translateX(0);
 }
 
 .nav-menu {
@@ -86,7 +87,7 @@ header input:checked + nav{
 }
 
 .nav-menu li {
-    padding: 1em 0;
+    height: 3em;
     font-size: 1.5em;
 }
 
@@ -94,7 +95,14 @@ header input:checked + nav{
     border-top: 1px solid magenta;
 }
 
-
+.list-item a {
+    height: 100%;
+    width: 100%;
+}
+/* .list-item a {
+    width: 100%;
+    height: 100%;
+} */
 
 .nav-menu-toggle-label i::before {
     font-size: 2em;
@@ -144,6 +152,9 @@ header input:checked + nav{
     justify-content: space-around;
 }
 
+.align-self-center {
+    align-self: center;
+}
 /* Flex */
 
 
