--- a/css/main.css
+++ b/css/main.css
@@ -145,6 +145,16 @@ header input:checked+nav {
 .gallery-item:hover::before {
 	transform: scale(1.154);
 }
+
+/* canvas */
+
+.ariel {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.tahoma {
+    font-family: Tahoma, 'Segoe UI', Geneva, Verdana, sans-serif
+}
 /* CSS Helpers */
 
 /* Lists */
