--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,7 @@ header {
     background-color: rgba(50, 50, 50, 0.9);
     color: hotpink;
     position: relative;
+    z-index: 99;
 }
 
 header input {
