--- a/css/main.css
+++ b/css/main.css
@@ -168,6 +168,9 @@ header input:checked+nav {
     transform: scale(1.154);
 }
 
+
+/* Meme Canvas and Editor */
+.meme-editor-canvas {padding: 2rem 0}
 /* CSS Helpers */
 
 /* Lists */
@@ -185,6 +188,10 @@ header input:checked+nav {
 
 .flex {
     display: flex;
+}
+
+.flex-column {
+    flex-direction: column;
 }
 
 .flex-1 {
@@ -232,18 +239,26 @@ header input:checked+nav {
 
 @media (min-width: 17rem) {
     .main-gallery.clean-list {
+        max-width: 15rem;
+        grid-template-columns: repeat(3, 5rem);
+        grid-auto-rows: 160px;
+    }
+
+    .gallery-item {grid-column: span 2}
+
+    .gallery-item:nth-child(even) {grid-column: 2/4}
+}
+
+@media (min-width: 22rem) {
+    .main-gallery.clean-list {
         max-width: 20rem;
         grid-template-columns: repeat(4, 5rem);
         grid-auto-rows: 160px;
     }
 
-    .gallery-item {
-        grid-column: span 2
-    }
+    .gallery-item:nth-child(even) {grid-column: span 2}
 
-    .gallery-item:nth-child(3n) {
-        grid-column: 2/4
-    }
+    .gallery-item:nth-child(3n) {grid-column: 2/4}
 }
 
 @media (min-width: 32rem) {
@@ -252,13 +267,9 @@ header input:checked+nav {
         grid-template-columns: repeat(6, 5rem);
     }
 
-    .gallery-item:nth-child(3n) {
-        grid-column: span 2;
-    }
+    .gallery-item:nth-child(3n) {grid-column: span 2;}
 
-    .gallery-item:nth-child(5n-1) {
-        grid-column: 2/4;
-    }
+    .gallery-item:nth-child(5n-1) {grid-column: 2/4;}
 }
 
 @media (min-width: 42rem) {
@@ -267,26 +278,15 @@ header input:checked+nav {
         grid-template-columns: repeat(8, 5rem);
     }
 
-    .gallery-item:nth-child(5n-1) {
-        grid-column: span 2;
-    }
+    .gallery-item:nth-child(5n-1) {grid-column: span 2;}
 
-    .gallery-item:nth-child(7n-2) {
-        grid-column: 2/4;
-    }
+    .gallery-item:nth-child(7n-2) {grid-column: 2/4;}
 }
 
-@media (min-width: 54rem) {
-    .main-gallery.clean-list {
-        max-width: 50rem;
-        grid-template-columns: repeat(10, 5rem);
-    }
 
-    .gallery-item:nth-child(7n-2) {
-        grid-column: span 2;
-    }
-
-    .gallery-item:nth-child(9n-3) {
-        grid-column: 2/4;
+@media (min-width: 66rem) {
+    .meme-editor-canvas {
+        flex-direction: row;
+        justify-content: space-around;
     }
 }
