"added search by keyword"

--- a/css/main.css
+++ b/css/main.css
@@ -59,22 +59,22 @@ header {
     z-index: 99;
 }
 
-header input {
+header > input {
     display: none;
 }
 
 header nav {
     position: absolute;
     top: 100%;
-    right: 0;
+    left: 0;
     width: 100vw;
     text-align: center;
-}
-
-header nav {
-    transform: translateX(-100%);
+    transform: scaleY(0);
+    transform-origin: top;
     transition: transform 500ms;
 }
+
+
 
 header h1 {
     margin: auto;
@@ -85,7 +85,12 @@ header h1 {
 }
 
 header input:checked+nav {
-    transform: translateX(0);
+    transform: scaleY(1);
+}
+
+.nav-menu li:first-child input{
+    width: 60%;
+    height: 2rem;
 }
 
 
@@ -262,6 +267,7 @@ header input:checked+nav {
 }
 
 @media (min-width: 32rem) {
+
     .main-gallery.clean-list {
         max-width: 30rem;
         grid-template-columns: repeat(6, 5rem);
@@ -273,6 +279,10 @@ header input:checked+nav {
 }
 
 @media (min-width: 42rem) {
+
+    .nav-menu-toggle-label {visibility: hidden}
+    .nav-menu {display: none}
+
     .main-gallery.clean-list {
         max-width: 40rem;
         grid-template-columns: repeat(8, 5rem);
