--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@
     font-family: Satisfy;
     src: url(../css/Fonts/Satisfy/Satisfy-Regular.ttf);
 }
+
 /* CSS Style Fonts */
 
 /* CSS Base Settings */
@@ -62,6 +63,9 @@ a {
     color: inherit;
 }
 
+/* CSS Base Settings */
+
+/* Header */
 
 #background-balls {
     position: fixed;
@@ -69,10 +73,6 @@ a {
     left: 0;
     z-index: -5;
 }
-
-/* CSS Base Settings */
-
-/* Header */
 
 header {
     padding: 1em 0;
@@ -85,7 +85,7 @@ header {
     z-index: 99;
 }
 
-header > input {
+header>input {
     display: none;
 }
 
@@ -100,10 +100,9 @@ header nav {
     transition: transform 500ms;
 }
 
-
-
 header h1 {
     margin: auto;
+    font-size: 2.4rem;
 }
 
 .nav-menu-toggle-label {
@@ -114,11 +113,10 @@ header input:checked+nav {
     transform: scaleY(1);
 }
 
-.nav-menu li:first-child input{
+.nav-menu li:first-child input {
     width: 60%;
     height: 2rem;
 }
-
 
 .nav-menu {
     background-color: rgba(128, 128, 128, 0.692);
@@ -135,15 +133,10 @@ header input:checked+nav {
     border-top: 1px solid magenta;
 }
 
-#meme-canvas {
-    border: 5px dashed silver;
-}
-
 .list-item a {
     height: 100%;
     width: 100%;
 }
-
 
 .nav-menu-toggle-label i::before {
     font-size: 2em;
@@ -162,7 +155,8 @@ header input:checked+nav {
     padding: 1rem;
 }
 
-.keyword-search-container input, .keyword-search-container label{
+.keyword-search-container input,
+.keyword-search-container label {
     margin: 0 0 0 1em;
     font-size: 2rem;
 }
@@ -179,13 +173,14 @@ header input:checked+nav {
 
 .famous-keyword-container h3 {
     text-transform: capitalize;
-    margin: 0;
+    margin: 0 0.2em;
     flex-basis: 2em;
     font-size: 2rem;
     cursor: pointer;
     padding: 0.5em 0;
     transition: all 0.4s 0.1s;
 }
+
 .famous-keyword-container h3:hover {
     font-size: 3rem;
     color: white;
@@ -203,6 +198,7 @@ header input:checked+nav {
 .gallery-item {
     grid-column: span 2;
     position: relative;
+    margin-bottom: -1.4rem;
 }
 
 .gallery-item a {
@@ -211,17 +207,11 @@ header input:checked+nav {
     bottom: 0;
     left: 0;
     right: 0;
-    /* width: 100%;
-    height: 100%; */
     display: inline-block;
     clip-path: polygon(50% 0, 93.3% 25%, 93.3% 75%, 50% 100%, 6.7% 75%, 6.7% 25%);
 }
 
-
-
-
 .gallery-item::before {
-    /* Goldenrod outline on the hexagon */
     content: "";
     position: absolute;
     top: 0;
@@ -238,11 +228,9 @@ header input:checked+nav {
     transform: scale(1.154);
 }
 
-
 /* Meme Canvas and Editor */
 
 .meme-editor-canvas {
-    background-color: rgba(76, 175, 80, 0.8);
     display: none;
 }
 
@@ -253,7 +241,7 @@ header input:checked+nav {
     justify-content: space-around;
 }
 
-.meme-editor-buttons button{
+.meme-editor-buttons button {
     background: #9bccf7;
     padding: 0.5em;
     font-size: 1em;
@@ -261,7 +249,7 @@ header input:checked+nav {
     margin: 0 1em;
 }
 
-.meme-editor-buttons button:first-child{
+.meme-editor-buttons button:first-child {
     font-size: 2em;
     text-transform: capitalize;
     position: relative;
@@ -284,8 +272,7 @@ header input:checked+nav {
 }
 
 #meme-canvas {
-    border:5px dashed silver;
-    margin-top: 1.5rem;
+    padding: 10px;
 }
 
 .meme-editor {
@@ -293,6 +280,7 @@ header input:checked+nav {
     flex-wrap: wrap;
     flex-direction: row;
 }
+
 .meme-editor * {
     font-family: Bangers;
     flex-grow: 2;
@@ -300,10 +288,9 @@ header input:checked+nav {
     margin-bottom: 1rem;
 }
 
-.clear-canvas button{
+.clear-canvas button {
     background-color: rgba(245, 245, 220, 0);
 }
-
 
 .meme-editor div {
     background: rgba(0, 23, 31, 0.7);
@@ -312,17 +299,16 @@ header input:checked+nav {
     border: 1px solid rgba(1, 27, 39, 0.616);
 }
 
-.meme-editor > div{
-    margin-top: 1rem; 
+.meme-editor>div {
+    margin-top: 1rem;
     padding: 1.5rem;
     border-radius: 2px;
-    /* background-color: rgba(1, 66, 58, 0.308); */
-    background: linear-gradient(180deg, rgba(155,204,247,1) 0%, rgba(0,128,128,1) 100%);
-    height: 1.5rem; 
+    background: linear-gradient(180deg, rgba(155, 204, 247, 1) 0%, rgba(0, 128, 128, 1) 100%);
+    height: 1.5rem;
 }
 
-.meme-editor > div:hover {
-    background: linear-gradient(0deg, rgba(155,204,247,1) 0%, rgba(0,128,128,1) 100%);
+.meme-editor>div:hover {
+    background: linear-gradient(0deg, rgba(155, 204, 247, 1) 0%, rgba(0, 128, 128, 1) 100%);
 }
 
 .clear-canvas-btn:hover {
@@ -340,8 +326,6 @@ header input:checked+nav {
 }
 
 /* Lists */
-
-
 
 /* Flex */
 
@@ -392,11 +376,12 @@ header input:checked+nav {
 .flex-wrap {
     flex-wrap: wrap;
 }
+
 /* Flex */
 
 /* FONTS */
 
-option[value=lato]{
+option[value=lato] {
     font-family: Lato;
 }
 
@@ -404,58 +389,72 @@ option[value=eurofurence] {
     font-family: Eurofurence;
 }
 
-option[value=acme]{
+option[value=acme] {
     font-family: Acme;
 }
 
-option[value=bangers]{
+option[value=bangers] {
     font-family: Bangers;
 }
 
-option[value=satisfy]{
+option[value=satisfy] {
     font-family: Satisfy;
 }
 
-option[value=ariel]{
+option[value=ariel] {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-option[value=tahoma]{
-    font-family:  Tahoma, 'Segoe UI',Geneva, Verdana, sans-serif
+option[value=tahoma] {
+    font-family: Tahoma, 'Segoe UI', Geneva, Verdana, sans-serif
 }
 
 /* FONTS */
 
-.main-editor-mode-padding {
-    padding: 2em 0;
+/* Background */
+.background-green {
+    background: rgba(76, 175, 80, 0.8);
 }
+
+/* Background */
 
 /* CSS Helpers */
 
 /* Media Rules */
 
 @media (min-width: 17rem) {
+
     .main-gallery.clean-list {
         max-width: 15rem;
         grid-template-columns: repeat(3, 5rem);
         grid-auto-rows: 160px;
     }
 
-    .gallery-item {grid-column: span 2}
+    .gallery-item {
+        grid-column: span 2
+    }
 
-    .gallery-item:nth-child(even) {grid-column: 2/4}
+    .gallery-item:nth-child(even) {
+        grid-column: 2/4
+    }
+
 }
 
 @media (min-width: 22rem) {
+
     .main-gallery.clean-list {
         max-width: 20rem;
         grid-template-columns: repeat(4, 5rem);
         grid-auto-rows: 160px;
     }
 
-    .gallery-item:nth-child(even) {grid-column: span 2}
+    .gallery-item:nth-child(even) {
+        grid-column: span 2
+    }
 
-    .gallery-item:nth-child(3n) {grid-column: 2/4}
+    .gallery-item:nth-child(3n) {
+        grid-column: 2/4
+    }
 }
 
 @media (min-width: 32rem) {
@@ -465,31 +464,45 @@ option[value=tahoma]{
         grid-template-columns: repeat(6, 5rem);
     }
 
-    .gallery-item:nth-child(3n) {grid-column: span 2;}
+    .gallery-item:nth-child(3n) {
+        grid-column: span 2;
+    }
 
-    .gallery-item:nth-child(5n-1) {grid-column: 2/4;}
+    .gallery-item:nth-child(5n-1) {
+        grid-column: 2/4;
+    }
 }
 
 @media (min-width: 42rem) {
+    
     header {
         position: relative;
     }
 
-    .nav-menu-toggle-label {visibility: hidden}
-    .nav-menu {display: none}
+    .nav-menu-toggle-label {
+        visibility: hidden
+    }
+
+    .nav-menu {
+        display: none
+    }
 
     .keyword-label-input-container {
         display: flex;
     }
-    
+
     .main-gallery.clean-list {
         max-width: 40rem;
         grid-template-columns: repeat(8, 5rem);
     }
 
-    .gallery-item:nth-child(5n-1) {grid-column: span 2;}
+    .gallery-item:nth-child(5n-1) {
+        grid-column: span 2;
+    }
 
-    .gallery-item:nth-child(7n-2) {grid-column: 2/4;}
+    .gallery-item:nth-child(7n-2) {
+        grid-column: 2/4;
+    }
 }
 
 @media (min-width: 66rem) {
@@ -499,16 +512,20 @@ option[value=tahoma]{
         grid-template-columns: repeat(10, 5rem);
     }
 
-    .gallery-item:nth-child(7n-2) {grid-column: span 2;}
+    .gallery-item:nth-child(7n-2) {
+        grid-column: span 2;
+    }
 
-    .gallery-item:nth-child(9n-3) {grid-column: 2/4;}
+    .gallery-item:nth-child(9n-3) {
+        grid-column: 2/4;
+    }
 
     .meme-editor-buttons {
         flex-direction: column;
         justify-content: center;
     }
 
-    .meme-editor-buttons button{
+    .meme-editor-buttons button {
         flex-basis: unset;
         margin: 1em 0;
     }
