--- a/css/main.css
+++ b/css/main.css
@@ -255,6 +255,12 @@ header input:checked+nav {
     position: relative;
 
 }
+.meme-editor-buttons button:nth-child(2) {
+    font-size: 2em;
+    text-transform: capitalize;
+    position: relative;
+
+}
 
 .meme-editor-buttons button:first-child::before {
     content: '←';
@@ -302,7 +308,7 @@ header input:checked+nav {
 .meme-editor>div {
     margin-top: 1rem;
     padding: 1.5rem;
-    border-radius: 2px;
+    border-radius: 5px;
     background: linear-gradient(180deg, rgba(155, 204, 247, 1) 0%, rgba(0, 128, 128, 1) 100%);
     height: 1.5rem;
 }
@@ -315,6 +321,12 @@ header input:checked+nav {
     cursor: pointer;
 }
 
+.add-text {
+    padding: 0 0.4rem;
+    font-size: 1.11;
+    background-color: #9bccf7;
+    cursor: pointer;
+}
 
 /* CSS Helpers */
 
